@@ -26,7 +26,7 @@ project(aventer-mesos)
 set(MESOS_MAJOR_VERSION 1)
 set(MESOS_MINOR_VERSION 11)
 set(MESOS_PATCH_VERSION 0)
-set(MESOS_SUB_VERSION 0.6.0)
+set(MESOS_SUB_VERSION 0.6.1)
 set(PACKAGE_VERSION
   ${MESOS_MAJOR_VERSION}.${MESOS_MINOR_VERSION}.${MESOS_PATCH_VERSION})
 
